bpo-43636: Validate the version tag in _PyType_Lookup